--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-logging.level.org.springframework=DEBUG
-logging.level.com.shreyam.springboot.todos=debug
+logging.level.org.springframework=INFO
+logging.level.com.shreyam.springboot.todos=INFO
+spring.mvc.format.date=yyyy-MM-dd 
+
+spring.datasource.url = jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
